# esp32camsys

./: .gitignore  .gitmodules
camsys/: .gitignore  README.md  karma.conf.js  main.js  package-lock.json  package.json
camsys-client/: CMakeLists.txt  Makefile  README.md  _sdkconfig  sdkconfig  sdkconfig.old
camsys-client/main/: CMakeLists.txt  _main.c  app_main.c  main.c  main.cpp
camsys-client/main/_old_lib_files/: camera.c  sccb.c  to_jpg.cpp
camsys-client/main/lib/myesp/: CMakeLists.txt  myesp.c  myesp.h
camsys-motion/: CMakeLists.txt
camsys-motion/main/: main.c
camsys-server/: README.md  angular.json  dev.bat  index.html  main.js  package-lock.json  package.json  server.js  style.css
camsys-server-1/: main.js  package.json
camsys-server-1/src/app/: app.component.spec.ts  app.module.ts  client-device.spec.ts
camsys-server-1/src/app/camera-server/: camera-server.component.html
camsys-server/e2e/src/: app.e2e-spec.ts
camsys-server/src/: index.html
camsys-server/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts  client-device.service.ts  com-port.spec.ts  com-port.ts  device-setup-writer.ts  http-server-app-factory.service.spec.ts  http-server-app-factory.service.ts  require.service.ts  wifi-credential-list.spec.ts  wifi-credential.ts
camsys-server/src/app/device-list/: device-list.component.html  (+1 more)
camsys/src/: index.html
camsys/src/app/: app.component.ts
old/camera/: camera.html  camera2.html  camera3.html
old/camsys-client/: Makefile  _sdkconfig.old  sdkconfig  sdkconfig.old
old/camsys-client/main/: app_common.c  app_main_camera.c  app_main_motion.c  main.c  main.cpp
old/camsys-motion/: sdkconfig
old/camsys-server-1/: builder.bat  package-lock.json  package.json
old/camsys-server-2/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  tslint.json
old/server-4/: package.json  server.js  style.css
old/simple/: sdkconfig  sdkconfig.old
old/simple/main/: CMakeLists.txt  main.c  ov2640_settings.h  ov7725.c
old/uart_echo/main/: uart_echo_example_main.c
simple/: package-lock.json  sdkconfig  sdkconfig.old
simple/client/: camera.html
simple/main/: _main.c  esp_jpg_decode.c  main.c  ov2640_regs.h  to_bmp.c  xclk.c
(+24 files in other folders)
