idf_component_register(SRCS "main.cpp"
                    INCLUDE_DIRS "." 
                        lib/esp32-camera
                        lib/esp32-camera
                        lib/esp32-camera/conversions
                        lib/esp32-camera/conversions/include
                        lib/esp32-camera/conversions/private_include
                        lib/esp32-camera/driver
                        lib/esp32-camera/driver/include
                        lib/esp32-camera/driver/private_include
                        lib/esp32-camera/sensors
                        lib/esp32-camera/sensors/private_include)

